--- a/bower.json
+++ b/bower.json
@@ -50,7 +50,7 @@
     "levenshtein": "~1.0.5",
     "rx-angular": "angular-rx#^1.1.3",
     "angular-ui-router": "^0.3.1",
-    "ng-focus-if": "~1.0.7"
+    "angular-scroll": "^1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.5",
