--- a/bower.json
+++ b/bower.json
@@ -51,7 +51,8 @@
     "rx-angular": "angular-rx#^1.1.3",
     "angular-ui-router": "^0.3.1",
     "ng-focus-if": "~1.0.7",
-    "angular-scroll": "^1.0.0"
+    "angular-scroll": "^1.0.0",
+    "ng-tags-input": "^3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.5",
