--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "angular-cookies": "~1.5.5",
     "angular-sanitize": "~1.5.5",
     "angular-i18n": "~1.5.5",
+    "angular-messages": "~1.5.5",
     "angular-translate": "~2.15.1",
     "angular-ui-select": "~0.19.0",
     "angular-bootstrap": "~1.3.2",
