--- a/package.json
+++ b/package.json
@@ -3,39 +3,39 @@
   "version": "0.0.0",
   "main": "index.js",
   "dependencies": {
-    "@bower_components/accounting": "josscrowcroft/accounting.js#~0.3.2",
-    "@bower_components/angular": "angular/bower-angular#~1.5.5",
-    "@bower_components/angular-bootstrap": "angular-ui/bootstrap-bower#~1.3.2",
-    "@bower_components/angular-cookies": "angular/bower-angular-cookies#~1.5.5",
-    "@bower_components/angular-filter": "a8m/angular-filter#^0.5.17",
-    "@bower_components/angular-i18n": "angular/bower-angular-i18n#~1.5.5",
-    "@bower_components/angular-messages": "angular/bower-angular-messages#~1.5.5",
-    "@bower_components/angular-mocks": "angular/bower-angular-mocks#~1.5.5",
-    "@bower_components/angular-moment": "urish/angular-moment#~1.0.0",
-    "@bower_components/angular-sanitize": "angular/bower-angular-sanitize#~1.5.5",
-    "@bower_components/angular-scenario": "angular/bower-angular-scenario#~1.5.5",
-    "@bower_components/angular-scroll": "oblador/angular-scroll#^1.0.0",
-    "@bower_components/angular-socket-io": "btford/angular-socket-io#~0.7.0",
-    "@bower_components/angular-translate": "PascalPrecht/bower-angular-translate#~2.15.1",
-    "@bower_components/angular-ui-codemirror": "angular-ui/ui-codemirror#~0.3.0",
-    "@bower_components/angular-ui-router": "angular-ui/angular-ui-router-bower#^0.3.1",
-    "@bower_components/angular-ui-select": "angular-ui/ui-select#~0.19.0",
-    "@bower_components/angular-xeditable": "vitalets/angular-xeditable#~0.1.12",
-    "@bower_components/animate.css": "daneden/animate.css#~3.2.6",
-    "@bower_components/bootstrap": "twbs/bootstrap#~3.3.6",
-    "@bower_components/bootstrap-multiselect": "davidstutz/bootstrap-multiselect#~0.9.10",
-    "@bower_components/codemirror": "components/codemirror#~5.2.0",
-    "@bower_components/components-font-awesome": "components/font-awesome#~4.2.0",
-    "@bower_components/jquery": "jquery/jquery-dist#>= 1.11.0",
-    "@bower_components/levenshtein": "gf3/Levenshtein#~1.0.5",
-    "@bower_components/lodash": "lodash/lodash#~3.10.1",
-    "@bower_components/moment": "moment/moment#~2.9.0",
-    "@bower_components/ng-file-upload": "danialfarid/angular-file-upload-bower#^12.0.4",
-    "@bower_components/ng-focus-if": "hiebj/ng-focus-if#~1.0.7",
-    "@bower_components/ng-tags-input": "mbenford/ngTagsInput-bower#^3.1.1",
-    "@bower_components/rx-angular": "Reactive-Extensions/rx.angular.js#^1.1.3",
-    "@bower_components/rxjs": "Reactive-Extensions/RxJS#*",
-    "@bower_components/socket.io-client": "LearnBoost/socket.io-client#~1.2.0"
+    "accounting": "~0.3.2",
+    "angular": "~1.5.5",
+    "angular-ui-bootstrap": "~1.3.2",
+    "angular-cookies": "~1.5.5",
+    "angular-filter": "^0.5.17",
+    "angular-i18n": "~1.5.5",
+    "angular-messages": "~1.5.5",
+    "angular-mocks": "~1.5.5",
+    "angular-moment": "~1.0.0",
+    "angular-sanitize": "~1.5.5",
+    "angular-scenario": "~1.5.5",
+    "angular-scroll": "^1.0.0",
+    "angular-socket-io": "~0.7.0",
+    "angular-translate": "~2.15.1",
+    "angular-ui-codemirror": "~0.3.0",
+    "@uirouter/angularjs": "^0.3.1",
+    "ui-select": "~0.19.0",
+    "angular-xeditable": "~0.1.12",
+    "animate.css": "~3.7.0",
+    "bootstrap": "~3.3.6",
+    "bootstrap-multiselect": "~0.9.10",
+    "codemirror": "~5.2.0",
+    "components-font-awesome": "~4.2.0",
+    "jquery": "1.9.1 - 3",
+    "levenshtein": "~1.0.5",
+    "lodash": "3.10.1",
+    "moment": "~2.9.0",
+    "ng-file-upload": "^12.0.4",
+    "ng-focus-if": "~1.0.7",
+    "ng-tags-input": "^3.1.1",
+    "rx-angular": "^1.1.3",
+    "rx": "~4.1.0",
+    "socket.io-client": "^1.2.0"
   },
   "devDependencies": {
     "connect-modrewrite": "^0.7.9",
@@ -85,7 +85,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "travis": "npm test && grunt coveralls",
-    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
+    "travis": "npm test && grunt coveralls"
   }
 }
