--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "angular-ui-select": "~0.19.0",
     "angular-bootstrap": "~1.3.2",
     "angular-socket-io": "~0.7.0",
+    "angular-jwt": "~0.1.9",
     "bootstrap": "~3.3.6",
     "lodash": "~3.10.1",
     "socket.io-client": "~1.2.0",
