--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,7 @@
     "components-font-awesome": "~4.2.0",
     "moment": "~2.20.0",
     "accounting": "~0.3.2",
-    "bootstrap-multiselect": "~0.9.10",
+    "bootstrap-multiselect": "0.9.15",
     "ng-file-upload": "^12.0.4",
     "animate.css": "~3.2.6",
     "angular-ui-codemirror": "~0.3.0",
