Name tests actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on: push
 jobs:
   test:
     runs-on: ubuntu-latest
+    name: Run grunt tests
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
